# Competitive

./: .gitignore  README.md
Advent of Code/: CMakeLists.txt
Advent of Code/2015/: Day 1.cpp  Day 2.cpp  Day 3.cpp
Advent of Code/2024/: Day 1.cpp  Day 2.cpp  Day 3.cpp  Day 4.cpp  Day 5.cpp
Advent of Code/2025/: Day 1.cpp  Day 10.cpp  Day 10.input.txt  Day 11.cpp  Day 11.input.txt  Day 12.cpp  Day 12.input.txt  Day 2.cpp  Day 3.cpp  Day 4.cpp  Day 4.input.txt  Day 5.cpp  Day 6.cpp  Day 7.cpp  Day 8.cpp  Day 9.cpp
Algoritmika 2024/: Algoritmika 2024.sln
Algoritmika 2024/Solutions/: Constants.cs  Line.cs  Point.cs  Program.cs  Rectangle.cs  Solve.cs
Algoritmika 2024/Tests/: SolutionTests.cs  Tests.csproj
AtCoder/: CMakeLists.txt
AtCoder/Beginner Contest 420/: Most Minority.cpp  Sum of Min Query.cpp  Toggle Maze.cpp  What month is it.cpp
Codeforces/: CMakeLists.txt
Codeforces/Educational Codeforces Round 139/: ExtremelyRound.cpp  HamiltonianWall.cpp
Codeforces/Educational Round #107/: GCD Length.cpp  Min Cost String.cpp  Review Site.cpp  Yet Another Card Deck.cpp
Codeforces/Educational Round #139/: Extremely Round.cpp  Notepad#.cpp
Codeforces/Educational Round #173/: Coin Transformation.cpp  Digits.cpp
Codeforces/Educational Round #178/: Array and GCD.cpp  Move to the End.cpp
Codeforces/Educational Round #179/: Changing the String.cpp  Creating a Schedule.cpp  Energy Crystals.cpp  Equal Values.cpp  Fibonacci Cubes.cpp
Codeforces/Educational Round #180/: Coloring Game.cpp  Race.cpp  Reachability and Tree.cpp  Shrinking Array.cpp
Codeforces/Educational Round #181/: Difficult Contest.cpp
Codeforces/Educational Round 178/: Array and GCD.cpp  Card Game.cpp  Three Decks.cpp  Unpleasant Strings.cpp
Codeforces/Global Round #29/: Multiple Construction.cpp  Shortest Increasing Path.cpp
Codeforces/Global Round 24/: Doremy's Paint.cpp
Codeforces/Hello 2023/: HallOfFame.cpp
Codeforces/Round #1003/: Skibidus and Amog'u.cpp  Skibidus and Capping.cpp  Skibidus and Fanum Tax.cpp  Skibidus and Ohio.cpp  Skibidus and Rizz.cpp  Skibidus and Sigma.cpp
Codeforces/Round #1016/: Expensive Number.cpp  Hackers and Neural Networks.cpp  Ideal Generator.cpp  Min Max MEX.cpp  Shorten the Array.cpp  Simple Repetition.cpp  Skibidi Table.cpp
Codeforces/Round #1017/: Bobritto Bandito.cpp  Boneca Ambalabu.cpp  Brr Brrr Patapim.cpp  Chimpanzini Bananini.cpp  La Vaca Saturno Saturnita.cpp  Trippi Troppi.cpp  Trulimero Trulicina.cpp  Tung Tung Sahur.cpp
Codeforces/Round #1020/: Cherry Bomb.cpp  Dr. TC.cpp  Flower Boy.cpp  Goblin.cpp  St. Chroma.cpp  Wolf.cpp
Codeforces/Round #1023/: Apples in Boxes.cpp  LRC and VIP.cpp
Codeforces/Round #1024/: Dinner Time.cpp  Mex in the Grid.cpp  The Picky Cat.cpp
Codeforces/Round #1025/: It's Time To Duel.cpp
Codeforces/Round #1026/: Down with Brackets.cpp  Fashionable Array.cpp  Fewer Batteries.cpp  Racing.cpp
Codeforces/Round #1027/: Come a Little Closer.cpp  Kirei Attacks the Estate.cpp  Need More Arrays.cpp  Not Quite a Palindromic String.cpp  Square Year.cpp
Codeforces/Round #1028/: Gellyfish and Baby's Breath.cpp  Gellyfish and Flaming Peony.cpp  Gellyfish and Tricolor Pansy.cpp
Codeforces/Round #1029/: Cool Partition.cpp  False Alarm.cpp  Lost Soul.cpp  Omg Graph.cpp  Retaliation.cpp  Shrink.cpp  Wildflower.cpp
Codeforces/Round #1030/: Equal Subsequences.cpp  Make It Beautiful.cpp  Make It Permutation.cpp
Codeforces/Round #1031/: Cheater.cpp  Good Start.cpp  Shashliks.cpp  Smilo and Minecraft.cpp
Codeforces/Round #1032/: 1709.cpp  Above the Clouds.cpp  Gangsta.cpp  Ice Baby.cpp  Letter Home.cpp  Sponsor of Your Problems.cpp  Those Who Are With Us.cpp  Yamakasi.cpp
Codeforces/Round #1033/: Divine Tree.cpp  Square Pool.cpp  Square of Rectangles.cpp
Codeforces/Round #1034/: Binary String Battle.cpp  Blackboard Game.cpp  MEX Count.cpp  Minimize Fixed Points.cpp  Prefix Min and Suffix Max.cpp  Tournament.cpp
Codeforces/Round #1035/: Add or XOR.cpp  Line Segments.cpp
Codeforces/Round #1036/: Deranged Deletions.cpp  Minimise Sum.cpp
Codeforces/Round #1037/: I Will Definitely Make It.cpp  No Casino in the Mountains.cpp  Only One Digit.cpp
Codeforces/Round #1039/: Deque Process.cpp  Leftmost Below.cpp  Recycling Center.cpp
Codeforces/Round #1041/: Mix Mex Max.cpp
Codeforces/Round #1042/: Adjacent XOR.cpp  Alternating Series.cpp  Lever.cpp  Make it Equal.cpp
Codeforces/Round #1043/: Homework.cpp  The Cunning Seller (easy).cpp  The Cunning Seller (hard).cpp  The Secret Number.cpp
Codeforces/Round #1044/: Chicken Jockey.cpp  Redstone.cpp  Villagers.cpp
Codeforces/Round #1045/: Add 0 or K.cpp  Even Larger.cpp  Painting With Two Colors.cpp
Codeforces/Round #1046/: In the Dream.cpp
Codeforces/Round #1050/: Destruction of the Dandelion Fields.cpp  Lasers.cpp  Pacer.cpp  Split.cpp  Sublime Sequence.cpp
Codeforces/Round #1065/: Shizuku Hoshikawa and Farm Legs.cpp  Yuu Koito and Minimum Absolute Sum.cpp
Codeforces/Round #1071/: Blackslex and Number Theory.cpp  Blackslex and Password.cpp  Blackslex and Penguin Civilization.cpp  Blackslex and Showering.cpp
Codeforces/Round #827/: Coprime.cpp  Increasing.cpp  Orray.cpp  Scuza.cpp  Smaller.cpp  Stripes.cpp  Sum.cpp
Codeforces/Round #834/: Lost Permutation.cpp  MakeItRound.cpp  Thermostat.cpp
Codeforces/Round #834 (Div. 3)/: Yes-Yes.cpp
Codeforces/Round #835/: Quests.cpp
Codeforces/Round #835 (Div. 4)/: SlavicGsFavoriteProblem.cpp
Codeforces/Round #873/: CountingOrders.cpp  DivisibleArray.cpp  PermutationSwap.cpp
Codeforces/Round #907/: Deja Vu.cpp  Sorting with Twos.cpp
Codeforces/Round #983/: Circuit.cpp
Codeforces/Round #987/: Penchick and Modern Monument.cpp
Codeforces/Round #988/: InterceptedInputs.cpp  Twice.cpp
Codeforces/Round #991/: Digital string maximization.cpp  Line Breaks.cpp  Three Strings.cpp  Transfusion.cpp  Tree Destruction.cpp  Uninteresting Number.cpp
Codeforces/Round #993/: Easy Problem.cpp  Hard Problem.cpp  Harder Problem.cpp  Insane Problem.cpp  Normal Problem.cpp
SoftUniada 2024/: SoftUniada 2024.sln
(+5 files in other folders)
