cmake_minimum_required(VERSION 3.31)
project(AtCoder)

set(CMAKE_CXX_STANDARD 20)

add_executable("BC420_A" "Beginner Contest 420/What month is it.cpp")
add_executable("BC420_B" "Beginner Contest 420/Most Minority.cpp")
add_executable("BC420_C" "Beginner Contest 420/Sum of Min Query.cpp")
add_executable("BC420_D" "Beginner Contest 420/Toggle Maze.cpp")
