cmake_minimum_required(VERSION 3.24)
project(Codeforces)

set(CMAKE_CXX_STANDARD 20)

add_executable("E139_A" "Educational Round 139/Extremely Round.cpp")
add_executable("E139_B" "Educational Round 139/Notepad#.cpp")
add_executable("E139_C" "Educational Round 139/Hamiltonian Wall.cpp")

add_executable("E178_A" "Educational Round 178/Three Decks.cpp")
add_executable("E178_B" "Educational Round 178/Move to the End.cpp")
add_executable("E178_C" "Educational Round 178/Card Game.cpp")
add_executable("E178_D" "Educational Round 178/Array and GCD.cpp")
add_executable("E178_E" "Educational Round 178/Unpleasant Strings.cpp")

add_executable("G24_A" "Global Round 24/Doremy's Paint.cpp")

add_executable("Sum" "Round #827/Sum.cpp")
add_executable("Increasing" "Round #827/Increasing.cpp")
add_executable("Stripes" "Round #827/Stripes.cpp")

add_executable("834_A" "Round #834/Yes-Yes.cpp")
add_executable("834_B" "Round #834/Lost Permutation.cpp")
add_executable("834_C" "Round #834/Thermostat.cpp")
add_executable("834_D" "Round #834/Make It Round.cpp")

add_executable("835_F" "Round #835/Quests.cpp")
add_executable("835_G" "Round #835/SlavicG's Favorite Problem.cpp")

add_executable("Hello_2023_A" "Hello 2023/Hall of Fame.cpp")

add_executable("873_2_A" "Round #873/Divisible Array.cpp")
add_executable("PermutationSwap" "Round #873/Permutation Swap.cpp")
add_executable("873_1_A" "Round #873/Counting Orders.cpp")

add_executable("907_A" "Round #907/Sorting with Twos.cpp")
add_executable("970_B" "Round #907/Deja Vu.cpp")

add_executable("983_A" "Round #983/Circuit.cpp")

add_executable("987_A" "Round #987/Penchick and Modern Monument.cpp")

add_executable("988_A" "Round #988/Twice.cpp")
add_executable("988_B" "Round #988/Intercepted Inputs.cpp")

add_executable("1020_A" "Round #1020/Dr. TC.cpp")
add_executable("1020_B" "Round #1020/St. Chroma.cpp")
add_executable("1020_C" "Round #1020/Cherry Bomb.cpp")
add_executable("1020_D" "Round #1020/Flower Boy.cpp")
add_executable("1020_E" "Round #1020/Wolf.cpp")
add_executable("1020_F" "Round #1020/Goblin.cpp")

add_executable("1025_A" "Round #1025/It's Time To Duel.cpp")
