cmake_minimum_required(VERSION 3.24)
project(Codeforces)

set(CMAKE_CXX_STANDARD 20)

add_executable("E107_A" "Educational Round #107/Review Site.cpp")
add_executable("E107_B" "Educational Round #107/GCD Length.cpp")
add_executable("E107_C" "Educational Round #107/Yet Another Card Deck.cpp")
add_executable("E107_D" "Educational Round #107/Min Cost String.cpp")

add_executable("E139_A" "Educational Round #139/Extremely Round.cpp")
add_executable("E139_B" "Educational Round #139/Notepad#.cpp")
add_executable("E139_C" "Educational Round #139/Hamiltonian Wall.cpp")

add_executable("E173_A" "Educational Round #173/Coin Transformation.cpp")
add_executable("E173_B" "Educational Round #173/Digits.cpp")

add_executable("E178_A" "Educational Round #178/Three Decks.cpp")
add_executable("E178_B" "Educational Round #178/Move to the End.cpp")
add_executable("E178_C" "Educational Round #178/Card Game.cpp")
add_executable("E178_D" "Educational Round #178/Array and GCD.cpp")
add_executable("E178_E" "Educational Round #178/Unpleasant Strings.cpp")

add_executable("E179_A" "Educational Round #179/Energy Crystals.cpp")
add_executable("E179_B" "Educational Round #179/Fibonacci Cubes.cpp")
add_executable("E179_C" "Educational Round #179/Equal Values.cpp")
add_executable("E179_D" "Educational Round #179/Creating a Schedule.cpp")
add_executable("E179_E" "Educational Round #179/Changing the String.cpp")

add_executable("G24_A" "Global Round #24/Doremy's Paint.cpp")

add_executable("Sum" "Round #827/Sum.cpp")
add_executable("Increasing" "Round #827/Increasing.cpp")
add_executable("Stripes" "Round #827/Stripes.cpp")

add_executable("834_A" "Round #834/Yes-Yes.cpp")
add_executable("834_B" "Round #834/Lost Permutation.cpp")
add_executable("834_C" "Round #834/Thermostat.cpp")
add_executable("834_D" "Round #834/Make It Round.cpp")

add_executable("835_F" "Round #835/Quests.cpp")
add_executable("835_G" "Round #835/SlavicG's Favorite Problem.cpp")

add_executable("Hello_2023_A" "Hello 2023/Hall of Fame.cpp")

add_executable("873_2_A" "Round #873/Divisible Array.cpp")
add_executable("PermutationSwap" "Round #873/Permutation Swap.cpp")
add_executable("873_1_A" "Round #873/Counting Orders.cpp")

add_executable("907_A" "Round #907/Sorting with Twos.cpp")
add_executable("970_B" "Round #907/Deja Vu.cpp")

add_executable("983_A" "Round #983/Circuit.cpp")

add_executable("987_A" "Round #987/Penchick and Modern Monument.cpp")

add_executable("988_A" "Round #988/Twice.cpp")
add_executable("988_B" "Round #988/Intercepted Inputs.cpp")

add_executable("1016_A" "Round #1016/Ideal Generator.cpp")
add_executable("1016_B" "Round #1016/Expensive Number.cpp")
add_executable("1016_C" "Round #1016/Simple Repetition.cpp")
add_executable("1016_D" "Round #1016/Skibidi Table.cpp")
add_executable("1016_E" "Round #1016/Min Max MEX.cpp")
add_executable("1016_F" "Round #1016/Hackers and Neural Networks.cpp")

add_executable("1020_A" "Round #1020/Dr. TC.cpp")
add_executable("1020_B" "Round #1020/St. Chroma.cpp")
add_executable("1020_C" "Round #1020/Cherry Bomb.cpp")
add_executable("1020_D" "Round #1020/Flower Boy.cpp")
add_executable("1020_E" "Round #1020/Wolf.cpp")
add_executable("1020_F" "Round #1020/Goblin.cpp")

add_executable("1023_A" "Round #1023/LRC and VIP.cpp")
add_executable("1023_B" "Round #1023/Apples in Boxes.cpp")

add_executable("1024_A" "Round #1024/Dinner Time.cpp")
add_executable("1024_B" "Round #1024/The Picky Cat.cpp")
add_executable("1024_C" "Round #1024/Mex in the Grid.cpp")

add_executable("1025_A" "Round #1025/It's Time To Duel.cpp")

add_executable("1026_A" "Round #1026/Fashionable Array.cpp")
add_executable("1026_B" "Round #1026/Down with Brackets.cpp")
add_executable("1026_C" "Round #1026/Racing.cpp")

add_executable("1027_A" "Round #1027/Square Year.cpp")
add_executable("1027_B" "Round #1027/Not Quite a Palindromic String.cpp")
add_executable("1027_C" "Round #1027/Need More Arrays.cpp")
add_executable("1027_D" "Round #1027/Come a Little Closer.cpp")
add_executable("1027_E" "Round #1027/Kirei Attacks the Estate.cpp")

add_executable("1028_A" "Round #1028/Gellyfish and Tricolor Pansy.cpp")
add_executable("1028_B" "Round #1028/Gellyfish and Baby's Breath.cpp")
add_executable("1028_C" "Round #1028/Gellyfish and Flaming Peony.cpp")
