cmake_minimum_required(VERSION 3.24)
project(Codeforces)

set(CMAKE_CXX_STANDARD 20)

add_executable("E107_A" "Educational Round #107/Review Site.cpp")
add_executable("E107_B" "Educational Round #107/GCD Length.cpp")
add_executable("E107_C" "Educational Round #107/Yet Another Card Deck.cpp")
add_executable("E107_D" "Educational Round #107/Min Cost String.cpp")

add_executable("E139_A" "Educational Round #139/Extremely Round.cpp")
add_executable("E139_B" "Educational Round #139/Notepad#.cpp")
add_executable("E139_C" "Educational Round #139/Hamiltonian Wall.cpp")

add_executable("E173_A" "Educational Round #173/Coin Transformation.cpp")
add_executable("E173_B" "Educational Round #173/Digits.cpp")

add_executable("E178_A" "Educational Round #178/Three Decks.cpp")
add_executable("E178_B" "Educational Round #178/Move to the End.cpp")
add_executable("E178_C" "Educational Round #178/Card Game.cpp")
add_executable("E178_D" "Educational Round #178/Array and GCD.cpp")
add_executable("E178_E" "Educational Round #178/Unpleasant Strings.cpp")

add_executable("E179_A" "Educational Round #179/Energy Crystals.cpp")
add_executable("E179_B" "Educational Round #179/Fibonacci Cubes.cpp")
add_executable("E179_C" "Educational Round #179/Equal Values.cpp")
add_executable("E179_D" "Educational Round #179/Creating a Schedule.cpp")
add_executable("E179_E" "Educational Round #179/Changing the String.cpp")

add_executable("E180_A" "Educational Round #180/Race.cpp")
add_executable("E180_B" "Educational Round #180/Shrinking Array.cpp")
add_executable("E180_C" "Educational Round #180/Coloring Game.cpp")
add_executable("E180_D" "Educational Round #180/Reachability and Tree.cpp")

add_executable("E181_A" "Educational Round #181/Difficult Contest.cpp")

add_executable("G24_A" "Global Round #24/Doremy's Paint.cpp")

add_executable("G29_A" "Global Round #29/Shortest Increasing Path.cpp")
add_executable("G29_B" "Global Round #29/Multiple Construction.cpp")

add_executable("827_A" "Round #827/Sum.cpp")
add_executable("827_B" "Round #827/Increasing.cpp")
add_executable("827_C" "Round #827/Stripes.cpp")
add_executable("827_D" "Round #827/Coprime.cpp")
add_executable("827_E" "Round #827/Scuza.cpp")
add_executable("827_F" "Round #827/Smaller.cpp")
add_executable("827_G" "Round #827/Orray.cpp")

add_executable("834_A" "Round #834/Yes-Yes.cpp")
add_executable("834_B" "Round #834/Lost Permutation.cpp")
add_executable("834_C" "Round #834/Thermostat.cpp")
add_executable("834_D" "Round #834/Make It Round.cpp")

add_executable("835_F" "Round #835/Quests.cpp")
add_executable("835_G" "Round #835/SlavicG's Favorite Problem.cpp")

add_executable("Hello_2023_A" "Hello 2023/Hall of Fame.cpp")

add_executable("873_2_A" "Round #873/Divisible Array.cpp")
add_executable("873_2_B" "Round #873/Permutation Swap.cpp")
add_executable("873_1_A" "Round #873/Counting Orders.cpp")

add_executable("907_A" "Round #907/Sorting with Twos.cpp")
add_executable("970_B" "Round #907/Deja Vu.cpp")

add_executable("983_A" "Round #983/Circuit.cpp")

add_executable("987_A" "Round #987/Penchick and Modern Monument.cpp")

add_executable("988_A" "Round #988/Twice.cpp")
add_executable("988_B" "Round #988/Intercepted Inputs.cpp")

add_executable("991_A" "Round #991/Line Breaks.cpp")
add_executable("991_B" "Round #991/Transfusion.cpp")
add_executable("991_C" "Round #991/Uninteresting Number.cpp")
add_executable("991_D" "Round #991/Digital string maximization.cpp")
add_executable("991_E" "Round #991/Three Strings.cpp")
add_executable("991_G" "Round #991/Tree Destruction.cpp")

add_executable("993_A" "Round #993/Easy Problem.cpp")
add_executable("993_B" "Round #993/Normal Problem.cpp")
add_executable("993_C" "Round #993/Hard Problem.cpp")
add_executable("993_D" "Round #993/Harder Problem.cpp")
add_executable("993_E" "Round #993/Insane Problem.cpp")

add_executable("1003_A" "Round #1003/Skibidus and Amog'u.cpp")
add_executable("1003_B" "Round #1003/Skibidus and Ohio.cpp")
add_executable("1003_C" "Round #1003/Skibidus and Fanum Tax.cpp")
add_executable("1003_D" "Round #1003/Skibidus and Sigma.cpp")
add_executable("1003_E" "Round #1003/Skibidus and Rizz.cpp")
add_executable("1003_G" "Round #1003/Skibidus and Capping.cpp")

add_executable("1016_A" "Round #1016/Ideal Generator.cpp")
add_executable("1016_B" "Round #1016/Expensive Number.cpp")
add_executable("1016_C" "Round #1016/Simple Repetition.cpp")
add_executable("1016_D" "Round #1016/Skibidi Table.cpp")
add_executable("1016_E" "Round #1016/Min Max MEX.cpp")
add_executable("1016_F" "Round #1016/Hackers and Neural Networks.cpp")
add_executable("1016_G" "Round #1016/Shorten the Array.cpp")

add_executable("1017_A" "Round #1017/Trippi Troppi.cpp")
add_executable("1017_B" "Round #1017/Bobritto Bandito.cpp")
add_executable("1017_C" "Round #1017/Brr Brrr Patapim.cpp")
add_executable("1017_D" "Round #1017/Tung Tung Sahur.cpp")
add_executable("1017_E" "Round #1017/Boneca Ambalabu.cpp")
add_executable("1017_F" "Round #1017/Trulimero Trulicina.cpp")
add_executable("1017_G" "Round #1017/Chimpanzini Bananini.cpp")
add_executable("1017_H" "Round #1017/La Vaca Saturno Saturnita.cpp")

add_executable("1020_A" "Round #1020/Dr. TC.cpp")
add_executable("1020_B" "Round #1020/St. Chroma.cpp")
add_executable("1020_C" "Round #1020/Cherry Bomb.cpp")
add_executable("1020_D" "Round #1020/Flower Boy.cpp")
add_executable("1020_E" "Round #1020/Wolf.cpp")
add_executable("1020_F" "Round #1020/Goblin.cpp")

add_executable("1023_A" "Round #1023/LRC and VIP.cpp")
add_executable("1023_B" "Round #1023/Apples in Boxes.cpp")

add_executable("1024_A" "Round #1024/Dinner Time.cpp")
add_executable("1024_B" "Round #1024/The Picky Cat.cpp")
add_executable("1024_C" "Round #1024/Mex in the Grid.cpp")

add_executable("1025_A" "Round #1025/It's Time To Duel.cpp")

add_executable("1026_A" "Round #1026/Fashionable Array.cpp")
add_executable("1026_B" "Round #1026/Down with Brackets.cpp")
add_executable("1026_C" "Round #1026/Racing.cpp")
add_executable("1026_D" "Round #1026/Fewer Batteries.cpp")

add_executable("1027_A" "Round #1027/Square Year.cpp")
add_executable("1027_B" "Round #1027/Not Quite a Palindromic String.cpp")
add_executable("1027_C" "Round #1027/Need More Arrays.cpp")
add_executable("1027_D" "Round #1027/Come a Little Closer.cpp")
add_executable("1027_E" "Round #1027/Kirei Attacks the Estate.cpp")

add_executable("1028_A" "Round #1028/Gellyfish and Tricolor Pansy.cpp")
add_executable("1028_B" "Round #1028/Gellyfish and Baby's Breath.cpp")
add_executable("1028_C" "Round #1028/Gellyfish and Flaming Peony.cpp")

add_executable("1029_A" "Round #1029/False Alarm.cpp")
add_executable("1029_B" "Round #1029/Shrink.cpp")
add_executable("1029_C" "Round #1029/Cool Partition.cpp")
add_executable("1029_D" "Round #1029/Retaliation.cpp")
add_executable("1029_E" "Round #1029/Lost Soul.cpp")
add_executable("1029_F" "Round #1029/Wildflower.cpp")
add_executable("1029_G" "Round #1029/Omg Graph.cpp")

add_executable("1030_A" "Round #1030/Equal Subsequences.cpp")
add_executable("1030_B" "Round #1030/Make It Permutation.cpp")
add_executable("1030_C" "Round #1030/Make It Beautiful.cpp")

add_executable("1031_A" "Round #1031/Shashliks.cpp")
add_executable("1031_B" "Round #1031/Good Start.cpp")
add_executable("1031_C" "Round #1031/Smilo and Minecraft.cpp")
add_executable("1031_D" "Round #1031/Cheater.cpp")

add_executable("1032_A" "Round #1032/Letter Home.cpp")
add_executable("1032_B" "Round #1032/Above the Clouds.cpp")
add_executable("1032_C" "Round #1032/Those Who Are With Us.cpp")
add_executable("1032_D" "Round #1032/1709.cpp")
add_executable("1032_E" "Round #1032/Sponsor of Your Problems.cpp")
add_executable("1032_F" "Round #1032/Yamakasi.cpp")
add_executable("1032_G" "Round #1032/Gangsta.cpp")
add_executable("1032_H" "Round #1032/Ice Baby.cpp")

add_executable("1033_A" "Round #1033/Square of Rectangles.cpp")
add_executable("1033_B" "Round #1033/Square Pool.cpp")
add_executable("1033_C" "Round #1033/Divine Tree.cpp")

add_executable("1034_A" "Round #1034/Blackboard Game.cpp")
add_executable("1034_B" "Round #1034/Tournament.cpp")
add_executable("1034_C" "Round #1034/Prefix Min and Suffix Max.cpp")
add_executable("1034_D" "Round #1034/Binary String Battle.cpp")
add_executable("1034_E" "Round #1034/MEX Count.cpp")
add_executable("1034_F" "Round #1034/Minimize Fixed Points.cpp")

add_executable("1035_A" "Round #1035/Add or XOR.cpp")
add_executable("1035_B" "Round #1035/Line Segments.cpp")

add_executable("1036_A" "Round #1036/Deranged Deletions.cpp")
add_executable("1036_B" "Round #1036/Minimise Sum.cpp")

add_executable("1037_A" "Round #1037/Only One Digit.cpp")
add_executable("1037_B" "Round #1037/No Casino in the Mountains.cpp")
add_executable("1037_C" "Round #1037/I Will Definitely Make It.cpp")

add_executable("1039_A" "Round #1039/Recycling Center.cpp")
add_executable("1039_B" "Round #1039/Deque Process.cpp")
add_executable("1039_C" "Round #1039/Leftmost Below.cpp")

add_executable("1041_A" "Round #1041/Mix Mex Max.cpp")

add_executable("1042_A" "Round #1042/Lever.cpp")
add_executable("1042_B" "Round #1042/Alternating Series.cpp")
add_executable("1042_C" "Round #1042/Make it Equal.cpp")
add_executable("1042_E" "Round #1042/Adjacent XOR.cpp")

add_executable("1043_A" "Round #1043/Homework.cpp")
add_executable("1043_B" "Round #1043/The Secret Number.cpp")
add_executable("1043_C1" "Round #1043/The Cunning Seller (easy).cpp")
add_executable("1043_C2" "Round #1043/The Cunning Seller (hard).cpp")

add_executable("1044_A" "Round #1044/Redstone.cpp")
add_executable("1044_B" "Round #1044/Villagers.cpp")
add_executable("1044_D" "Round #1044/Chicken Jockey.cpp")

add_executable("1045_A" "Round #1045/Painting With Two Colors.cpp")
add_executable("1045_B" "Round #1045/Add 0 or K.cpp")
add_executable("1045_C" "Round #1045/Even Larger.cpp")

add_executable("1046_A" "Round #1046/In the Dream.cpp")

add_executable("1050_A" "Round #1050/Sublime Sequence.cpp")
add_executable("1050_B" "Round #1050/Lasers.cpp")
add_executable("1050_C" "Round #1050/Pacer.cpp")
add_executable("1050_D" "Round #1050/Destruction of the Dandelion Fields.cpp")
add_executable("1050_E" "Round #1050/Split.cpp")

add_executable("1065_A" "Round #1065/Shizuku Hoshikawa and Farm Legs.cpp")
add_executable("1065_B" "Round #1065/Yuu Koito and Minimum Absolute Sum.cpp")

add_executable("1071_A" "Round #1071/Blackslex and Password.cpp")
add_executable("1071_B" "Round #1071/Blackslex and Showering.cpp")
add_executable("1071_C" "Round #1071/Blackslex and Number Theory.cpp")
add_executable("1071_D" "Round #1071/Blackslex and Penguin Civilization.cpp")
